src/main/java/com/example/timelist/error/GroupSizeStudentException.java
package com.example.timelist.error;

public class GroupSizeStudentException extends RuntimeException{
    public GroupSizeStudentException(String message) {
        super(message);
    }
}
